// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meal Time Axis renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    graphLeftOffset={10}
    graphRightOffset={10}
    mealBlocks={
      Array [
        Object {
          "description": "BEDTIME",
          "endTime": 1,
          "startTime": 0,
          "width": 4.166666666666666,
        },
        Object {
          "description": "NIGHT",
          "endTime": 6,
          "startTime": 1,
          "width": 20.833333333333336,
        },
      ]
    }
    mealTimes={
      Array [
        Object {
          "description": "Night",
          "endTime": 6,
          "startTime": 1,
          "width": 20.833333333333336,
        },
        Object {
          "description": "Breakfast",
          "endTime": 11.5,
          "startTime": 6,
          "width": 22.916666666666664,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <MealTimesContainer>
          <MealTime
            showBorder={true}
            width={4.166666666666666}
          >
            <MealTitleWithTooltip>
              BEDTIME
            </MealTitleWithTooltip>
          </MealTime>
          <MealTime
            showBorder={true}
            width={20.833333333333336}
          >
            <MealTitleWithTooltip>
              NIGHT
            </MealTitleWithTooltip>
          </MealTime>
        </MealTimesContainer>,
        <MealTimesContainer>
          <MealTime
            showBorder={true}
            width={20.833333333333336}
          />
          <MealTime
            showBorder={true}
            width={22.916666666666664}
          />
        </MealTimesContainer>,
      ],
      "marginLeft": 10,
      "marginRight": 10,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MealTime
              showBorder={true}
              width={4.166666666666666}
            >
              <MealTitleWithTooltip>
                BEDTIME
              </MealTitleWithTooltip>
            </MealTime>,
            <MealTime
              showBorder={true}
              width={20.833333333333336}
            >
              <MealTitleWithTooltip>
                NIGHT
              </MealTitleWithTooltip>
            </MealTime>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "children": <MealTitleWithTooltip>
                BEDTIME
              </MealTitleWithTooltip>,
              "showBorder": true,
              "width": 4.166666666666666,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": "BEDTIME",
              },
              "ref": null,
              "rendered": "BEDTIME",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "children": <MealTitleWithTooltip>
                NIGHT
              </MealTitleWithTooltip>,
              "showBorder": true,
              "width": 20.833333333333336,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": "NIGHT",
              },
              "ref": null,
              "rendered": "NIGHT",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MealTime
              showBorder={true}
              width={20.833333333333336}
            />,
            <MealTime
              showBorder={true}
              width={22.916666666666664}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "children": null,
              "showBorder": true,
              "width": 20.833333333333336,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "children": null,
              "showBorder": true,
              "width": 22.916666666666664,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MealTimesContainer>
            <MealTime
              showBorder={true}
              width={4.166666666666666}
            >
              <MealTitleWithTooltip>
                BEDTIME
              </MealTitleWithTooltip>
            </MealTime>
            <MealTime
              showBorder={true}
              width={20.833333333333336}
            >
              <MealTitleWithTooltip>
                NIGHT
              </MealTitleWithTooltip>
            </MealTime>
          </MealTimesContainer>,
          <MealTimesContainer>
            <MealTime
              showBorder={true}
              width={20.833333333333336}
            />
            <MealTime
              showBorder={true}
              width={22.916666666666664}
            />
          </MealTimesContainer>,
        ],
        "marginLeft": 10,
        "marginRight": 10,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <MealTime
                showBorder={true}
                width={4.166666666666666}
              >
                <MealTitleWithTooltip>
                  BEDTIME
                </MealTitleWithTooltip>
              </MealTime>,
              <MealTime
                showBorder={true}
                width={20.833333333333336}
              >
                <MealTitleWithTooltip>
                  NIGHT
                </MealTitleWithTooltip>
              </MealTime>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "children": <MealTitleWithTooltip>
                  BEDTIME
                </MealTitleWithTooltip>,
                "showBorder": true,
                "width": 4.166666666666666,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "class",
                "props": Object {
                  "children": "BEDTIME",
                },
                "ref": null,
                "rendered": "BEDTIME",
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "children": <MealTitleWithTooltip>
                  NIGHT
                </MealTitleWithTooltip>,
                "showBorder": true,
                "width": 20.833333333333336,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "class",
                "props": Object {
                  "children": "NIGHT",
                },
                "ref": null,
                "rendered": "NIGHT",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <MealTime
                showBorder={true}
                width={20.833333333333336}
              />,
              <MealTime
                showBorder={true}
                width={22.916666666666664}
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "children": null,
                "showBorder": true,
                "width": 20.833333333333336,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "children": null,
                "showBorder": true,
                "width": 22.916666666666664,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Meal Time Title renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MealTitleWithTooltip />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": <div />,
      "textAlign": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
      },
      "ref": [Function],
      "rendered": null,
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": <div />,
        "textAlign": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
        },
        "ref": [Function],
        "rendered": null,
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
